<resources>
    <string name="app_name" translatable="false">Functional</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Functional</string>
    <string name="nav_header_subtitle">Simple to-dos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_todo">Create</string>
    <string name="message_add_todo">Create a to-do</string>
    <string name="action_undo">Undo</string>
    <string name="action_add_list">Create a to-do list</string>
    <string name="action_edit_list">Edit list</string>
    <string name="action_delete_list">Delete list</string>
    <string name="message_delete_list">Delete this to-do list?</string>
    <string name="action_delete">Delete</string>
    <string name="group_default_name">My to-do list</string>
    <string name="message_edit_list">Edit to-do list</string>
    <string name="action_save">Save</string>
    <string name="alert_list_name_empty">List name cannot be empty</string>
    <string name="alert_todo_empty">To-do cannot be empty</string>
    <string name="text_app_version">Version: %1$s</string>
    <string name="action_about">About</string>
    <string name="text_licenses">Open source notice</string>
    <string name="text_repo_url" translatable="false">https://jnuutinen.github.io/Functional/</string>
    <string name="menu_title_lists">To-do lists</string>
    <string name="hint_todo">To-do</string>
    <string name="text_no_todos">All done!</string>
    <string name="alert_todo_deleted">To-do deleted</string>
    <string name="hint_list_name">List name</string>
    <string name="action_select_color">Color</string>
    <string name="action_select">Select</string>
    <string name="message_select_color">Select a color</string>
    <string name="message_edit_todo">Edit to-do</string>
    <string name="intro_message_add_todo">Click + to create a new to-do</string>
    <string name="intro_title_add_todo">Create to-dos</string>
    <string name="intro_message_delete_todo">Swipe a to-do to the left or right to delete it</string>
    <string name="intro_title_delete_todo">Delete to-dos</string>
    <string name="intro_message_edit_todo">Click a to-do to edit it</string>
    <string name="intro_title_edit_todo">Edit to-dos</string>
    <string name="intro_message_manage_lists">You can create and select lists from the navigation drawer</string>
    <string name="content_description_help">Help button</string>
    <string name="action_help">Help</string>
    <string name="intro_title_manage_lists">Organize your to-dos with lists</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_deletion_background">Red to-do dismiss background</string>
    <string name="pref_description_deletion_background">When dismissing a to-do, show a red background and a delete
        icon
    </string>
    <string name="pref_title_default_list_name">Default list name</string>
    <string name="pref_description_default_list_name">Set the name for the default list that is created when the last
        list is deleted
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_key_deletion_background" translatable="false">deletionBackground</string>
    <string name="pref_key_default_list_name" translatable="false">defaultListName</string>
    <string name="title_fragment_new_todo">New to-do</string>

    <!-- Example settings for Notifications -->

</resources>
