<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group
            android:id="@+id/group_add"
            android:checkableBehavior="none">
        <item
                android:id="@+id/add_group"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/action_add_list"/>
    </group>

    <item android:title="@string/menu_title_lists" android:id="@+id/item_lists">
        <menu>
            <group
                    android:id="@+id/group_lists">
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/group_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help"/>
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/action_about"/>
    </group>

</menu>
