<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.jnuutinen.functional.presentation.TodosActivity">
    <item android:id="@+id/action_edit_list"
          android:title="@string/action_edit_list"
          android:orderInCategory="100"
          android:icon="@drawable/ic_edit_white_24dp"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete_list"
          android:title="@string/action_delete_list"
          android:orderInCategory="101"
          app:showAsAction="never" />
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="102"
          app:showAsAction="never" />
</menu>
